Bug 1154714 - don't check inline return type for Atomics.store. r=bbouvier